find_package(Qt6 REQUIRED COMPONENTS Test)

function(oaa_add_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE open-androidauto Qt6::Test)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

oaa_add_test(test_version test_version.cpp)
oaa_add_test(test_tcp_transport test_tcp_transport.cpp)
oaa_add_test(test_replay_transport test_replay_transport.cpp)
oaa_add_test(test_frame_header test_frame_header.cpp)
oaa_add_test(test_frame_serializer test_frame_serializer.cpp)
oaa_add_test(test_frame_assembler test_frame_assembler.cpp)
oaa_add_test(test_frame_parser test_frame_parser.cpp)
oaa_add_test(test_cryptor test_cryptor.cpp)
oaa_add_test(test_encryption_policy test_encryption_policy.cpp)
oaa_add_test(test_messenger test_messenger.cpp)
oaa_add_test(test_control_channel test_control_channel.cpp)
oaa_add_test(test_session_fsm test_session_fsm.cpp)
oaa_add_test(test_session_config test_session_config.cpp)
oaa_add_test(test_channel_id test_channel_id.cpp)
